@@ -1,5 +1,6 @@
 Changelog for DimensionDoor (v2.1.3-SNAPSHOT)
 
+2012-10-25 20:46:44 +0100    Fix localisation key mix up (fixes #21 and #23) (James Richardson)
 2012-10-25 20:31:35 +0100    clear armour when changing worlds (fixes #8 and #20) (James Richardson)
 2012-10-25 19:59:38 +0100    use latest version of BukkitUtilities (James Richardson)
 2012-08-10 11:31:46 +0100    update readme (James Richardson)
